[TEMP] Fix Compilation

--- a/arch/arm64/boot/dts/qcom/garlic/garlic.dtsi
+++ b/arch/arm64/boot/dts/qcom/garlic/garlic.dtsi
@@ -128,9 +128,9 @@
 			/delete-property/ qcom,en-ext-pfet-sc-pro;
 		};
 
-		pmi_haptic: qcom,haptic@c000 {
-			qcom,vmax-mv = <3000>;
-		};
+//		pmi_haptic: qcom,haptic@c000 {
+//			qcom,vmax-mv = <3000>;
+//		};
 	};
 };
 &soc {
