--- a/drivers/video/fbdev/msm/Kconfig
+++ b/drivers/video/fbdev/msm/Kconfig
@@ -143,4 +143,10 @@ config FB_MSM_MDSS_FRC_DEBUG
 	statistics and check whether its output pattern matches expected
 	cadence.
 
+config GPIO_TINNO_LCD_LDO
+	bool "lcd vdd ldo Support"
+	default n
+	---help---
+	Support the lcd gpio for vdd ldo
+
 endif
