[revisit] fix compilation errors

--- a/arch/arm64/configs/garlic_defconfig
+++ b/arch/arm64/configs/garlic_defconfig
@@ -2705,9 +2705,10 @@ CONFIG_MSM_FD=y
 # CONFIG_MSM_JPEGDMA is not set
 CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
 # CONFIG_MSM_SEC_CCI_DEBUG is not set
-CONFIG_MSM_VIDC_3X_V4L2=y
-CONFIG_MSM_VIDC_3X_GOVERNORS=y
+# CONFIG_MSM_VIDC_3X_V4L2 is not set
+# CONFIG_MSM_VIDC_3X_GOVERNORS is not set
 CONFIG_MSM_VIDC_V4L2=y
+CONFIG_MSM_VIDC_VMEM=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 # CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG is not set
@@ -2903,6 +2904,7 @@ CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
 # CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_GPIO_TINNO_LCD_LDO=y
 CONFIG_LCD_CLASS_DEVICE=m
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
