--- a/arch/arm64/boot/dts/qcom/msm8937-audio-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-audio-mtp.dtsi
@@ -11,27 +11,24 @@
  * GNU General Public License for more details.
  */
 
-&soc {
-	qcom,ion {
-		compatible = "qcom,msm-ion";
-		#address-cells = <1>;
-		#size-cells = <0>;
+&int_codec {
+	status = "okay";
+	qcom,model = "msm8952-snd-card-mtp";
+	qcom,msm-hs-micbias-type = "external";
+};
 
-		qcom,ion-heap@25 {
-			reg = <25>;
-			qcom,ion-heap-type = "SYSTEM";
-		};
+&pm8937_cajon_dig {
+	status = "okay";
+};
 
-		qcom,ion-heap@8 { /* CP_MM HEAP */
-			reg = <8>;
-			memory-region = <&secure_mem>;
-			qcom,ion-heap-type = "SECURE_DMA";
-		};
+&pm8937_cajon_analog {
+	status = "okay";
+};
 
-		qcom,ion-heap@27 { /* QSEECOM HEAP */
-			reg = <27>;
-			memory-region = <&qseecom_mem>;
-			qcom,ion-heap-type = "DMA";
-		};
-	};
+&wsa881x_i2c_f {
+	status = "okay";
+};
+
+&wsa881x_i2c_45 {
+	status = "okay";
 };
