--- a/arch/arm64/boot/dts/qcom/msm8937-camera.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-camera.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -233,9 +233,9 @@
 		qos-regs = <0x2c4 0x2c8 0x2cc 0x2d0 0x2d4 0x2d8
 			0x2dc 0x2e0>;
 		qos-settings = <0xaa55aa55
-			0xaa55aa55 0xaa55aa55
-			0xaa55aa55 0xaa55aa55
-			0xaa55aa55 0xaa55aa55
+			0xaa55aa55	0xaa55aa55
+			0xaa55aa55	0xaa55aa55
+			0xaa55aa55	0xaa55aa55
 			0xaa55aa55>;
 		vbif-entries = <1>;
 		vbif-regs = <0x124>;
@@ -245,14 +245,14 @@
 			0x99c 0x9a0 0x9a4 0x9a8 0x9ac 0x9b0
 			0x9b4 0x9b8 0x9bc 0x9c0 0x9c4 0x9c8>;
 		ds-settings = <0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0x00000110>;
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0x00000110>;
 		max-clk-nominal = <400000000>;
 		max-clk-turbo = <432000000>;
 	};
@@ -283,9 +283,9 @@
 		qos-regs = <0x2c4 0x2c8 0x2cc 0x2d0 0x2d4 0x2d8
 			0x2dc 0x2e0>;
 		qos-settings = <0xaa55aa55
-			0xaa55aa55 0xaa55aa55
-			0xaa55aa55 0xaa55aa55
-			0xaa55aa55 0xaa55aa55
+			0xaa55aa55	0xaa55aa55
+			0xaa55aa55	0xaa55aa55
+			0xaa55aa55	0xaa55aa55
 			0xaa55aa55>;
 		vbif-entries = <1>;
 		vbif-regs = <0x124>;
@@ -295,14 +295,14 @@
 			0x99c 0x9a0 0x9a4 0x9a8 0x9ac 0x9b0
 			0x9b4 0x9b8 0x9bc 0x9c0 0x9c4 0x9c8>;
 		ds-settings = <0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0xcccc1111
-			0xcccc1111 0x00000110>;
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0xcccc1111
+			0xcccc1111	0x00000110>;
 		max-clk-nominal = <400000000>;
 		max-clk-turbo = <432000000>;
 	};
@@ -316,28 +316,28 @@
 		status = "ok";
 		compatible = "qcom,msm-cam-smmu";
 		msm_cam_smmu_cb1: msm_cam_smmu_cb1 {
-			compatible = "qcom,msm-cam-smmu-cb";
-			iommus = <&apps_iommu 0x400 0x00>,
-				<&apps_iommu 0x2400 0x00>;
+			compatible = "qcom,qsmmu-cam-cb";
+			iommus = <&apps_iommu 0x400>,
+				<&apps_iommu 0x2400>;
 			label = "vfe";
 			qcom,scratch-buf-support;
 		};
 
 		msm_cam_smmu_cb2: msm_cam_smmu_cb2 {
-			compatible = "qcom,msm-cam-smmu-cb";
+			compatible = "qcom,qsmmu-cam-cb";
 			label = "vfe_secure";
 			qcom,secure-context;
 		};
 
 		msm_cam_smmu_cb3: msm_cam_smmu_cb3 {
-			compatible = "qcom,msm-cam-smmu-cb";
-			iommus = <&apps_iommu 0x1c00 0x00>;
+			compatible = "qcom,qsmmu-cam-cb";
+			iommus = <&apps_iommu 0x1c00>;
 			label = "cpp";
 		};
 
 		msm_cam_smmu_cb4: msm_cam_smmu_cb4 {
-			compatible = "qcom,msm-cam-smmu-cb";
-			iommus = <&apps_iommu 0x1800 0x00>;
+			compatible = "qcom,qsmmu-cam-cb";
+			iommus = <&apps_iommu 0x1800>;
 			label = "jpeg_enc0";
 		};
 	};
@@ -393,7 +393,8 @@
 		interrupt-names = "cpp";
 		vdd-supply = <&gdsc_cpp>;
 		qcom,vdd-names = "vdd";
-		clocks = <&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
+		clocks = <&clock_gcc clk_camss_top_ahb_clk_src>,
+			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_cpp_clk_src>,
 			<&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_cpp_ahb_clk>,
@@ -401,14 +402,13 @@
 			<&clock_gcc clk_gcc_camss_cpp_clk>,
 			<&clock_gcc clk_gcc_camss_micro_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ahb_clk>;
-		clock-names = "ispif_ahb_clk", "cpp_core_clk",
-			"camss_top_ahb_clk", "camss_vfe_cpp_ahb_clk",
+		clock-names = "camss_ahb_src", "ispif_ahb_clk",
+			"cpp_core_clk", "camss_top_ahb_clk",
+			"camss_vfe_cpp_ahb_clk",
 			"camss_vfe_cpp_axi_clk", "camss_vfe_cpp_clk",
 			"micro_iface_clk", "camss_ahb_clk";
 		qcom,clock-rates = <61540000 180000000 0 0 0 180000000 0 0>;
 		qcom,min-clock-rate = <133000000>;
-		resets = <&clock_gcc GCC_CAMSS_MICRO_BCR>;
-		reset-names = "micro_iface_reset";
 		qcom,bus-master = <1>;
 		qcom,msm-bus,name = "msm_camera_cpp";
 		qcom,msm-bus,num-cases = <2>;
@@ -417,7 +417,6 @@
 			<106 512 0 0>,
 			<106 512 0 0>;
 		qcom,msm-bus-vector-dyn-vote;
-		qcom,micro-reset;
 		qcom,cpp-fw-payload-info {
 			qcom,stripe-base = <156>;
 			qcom,plane-base = <141>;
