--- a/arch/arm64/boot/dts/qcom/msm8937-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-pinctrl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2016, 2018-2020, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -15,12 +15,10 @@
 	tlmm: pinctrl@1000000 {
 		compatible = "qcom,msm8937-pinctrl";
 		reg = <0x1000000 0x300000>;
-		reg-names = "pinctrl_regs";
-		interrupts-extended = <&wakegic GIC_SPI 208 IRQ_TYPE_NONE>;
+		interrupts = <0 208 0>;
 		gpio-controller;
 		#gpio-cells = <2>;
 		interrupt-controller;
-		interrupt-parent = <&wakegpio>;
 		#interrupt-cells = <2>;
 
 		pmx-uartconsole {
@@ -112,36 +110,6 @@
 			};
 		};
 
-		i2c_4 {
-			i2c_4_active: i2c_4_active {
-				/* active state */
-				mux {
-					pins = "gpio14", "gpio15";
-					function = "blsp_i2c4";
-				};
-
-				config {
-					pins = "gpio14", "gpio15";
-					drive-strength = <2>;
-					bias-disable;
-				};
-			};
-
-			i2c_4_sleep: i2c_4_sleep {
-				/* suspended state */
-				mux {
-					pins = "gpio14", "gpio15";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio14", "gpio15";
-					drive-strength = <2>;
-					bias-disable;
-				};
-			};
-		};
-
 		i2c_5 {
 			i2c_5_active: i2c_5_active {
 				/* active state */
@@ -172,67 +140,39 @@
 			};
 		};
 
-		nfc {
-			nfc_int_active: nfc_int_active {
-				/* active state */
-				mux {
-					/* GPIO 17 NFC Read Interrupt */
-					pins = "gpio17";
-					function = "gpio";
-				};
+		pmx_rd_nfc_int {
+			/*qcom,pins = <&gp 17>;*/
+			pins = "gpio17";
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "pmx_nfc_int";
 
-				config {
-					pins = "gpio17";
-					drive-strength = <2>; /* 2 MA */
-					bias-pull-up;
-				};
+			nfc_int_active: active {
+				drive-strength = <6>;
+				bias-pull-up;
 			};
 
-			nfc_int_suspend: nfc_int_suspend {
-				/* sleep state */
-				mux {
-					/* GPIO 17 NFC Read Interrupt */
-					pins = "gpio17";
-					function = "gpio";
-				};
+			nfc_int_suspend: suspend {
+				drive-strength = <6>;
+				bias-pull-up;
+			};
+		};
 
-				config {
-					pins = "gpio17";
-					drive-strength = <2>; /* 2 MA */
-					bias-pull-up;
-				};
+		pmx_nfc_reset {
+			/*qcom,pins = <&gp 16>;*/
+			pins = "gpio16";
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "pmx_nfc_disable";
+
+			nfc_disable_active: active {
+				drive-strength = <6>;
+				bias-pull-up;
 			};
 
-			nfc_disable_active: nfc_disable_active {
-				/* active state */
-				mux {
-					/* 16: NFC ENABLE 130: FW DNLD */
-					/* 93: ESE Enable */
-					pins = "gpio16", "gpio130", "gpio93";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio16", "gpio130", "gpio93";
-					drive-strength = <2>; /* 2 MA */
-					bias-pull-up;
-				};
-			};
-
-			nfc_disable_suspend: nfc_disable_suspend {
-				/* sleep state */
-				mux {
-					/* 16: NFC ENABLE 130: FW DNLD */
-					/* 93: ESE Enable */
-					pins = "gpio16", "gpio130", "gpio93";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio16", "gpio130", "gpio93";
-					drive-strength = <2>; /* 2 MA */
-					bias-disable;
-				};
+			nfc_disable_suspend: suspend {
+				drive-strength = <6>;
+				bias-disable;
 			};
 		};
 
@@ -350,174 +290,6 @@
 			};
 		};
 
-		spi6 {
-			spi6_default: spi6_default {
-				/* active state */
-				mux {
-					/* MOSI, MISO, CLK */
-					pins = "gpio20", "gpio21", "gpio23";
-					function = "blsp_spi6";
-				};
-
-				config {
-					pins = "gpio20", "gpio21", "gpio23";
-					drive-strength = <12>; /* 12 MA */
-					bias-disable = <0>; /* No PULL */
-				};
-			};
-
-			spi6_sleep: spi6_sleep {
-				/* suspended state */
-				mux {
-					/* MOSI, MISO, CLK */
-					pins = "gpio20", "gpio21", "gpio23";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio20", "gpio21", "gpio23";
-					drive-strength = <2>; /* 2 MA */
-					bias-pull-down; /* PULL Down */
-				};
-			};
-
-			spi6_cs0_active: cs0_active {
-				/* CS */
-				mux {
-					pins = "gpio22";
-					function = "blsp_spi6";
-				};
-
-				config {
-					pins = "gpio22";
-					drive-strength = <2>;
-					bias-disable = <0>;
-				};
-			};
-
-			spi6_cs0_sleep: cs0_sleep {
-				/* CS */
-				mux {
-					pins = "gpio22";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio22";
-					drive-strength = <2>;
-					bias-disable = <0>;
-				};
-			};
-		};
-
-		blsp2_uart2_active: blsp2_uart2_active {
-			mux {
-				pins = "gpio20", "gpio21", "gpio22", "gpio23";
-				function = "blsp_uart6";
-			};
-
-			config {
-				pins = "gpio20", "gpio21", "gpio22", "gpio23";
-				drive-strength = <2>;
-				bias-disable;
-			};
-		};
-
-		blsp2_uart2_sleep: blsp2_uart2_sleep {
-			mux {
-				pins = "gpio20", "gpio21", "gpio22", "gpio23";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio20", "gpio21", "gpio22", "gpio23";
-				drive-strength = <2>;
-				bias-disable;
-			};
-		};
-
-		spi7 {
-			spi7_default: spi7_default {
-				mux {
-					pins = "gpio85", "gpio86", "gpio88";
-					function = "blsp_spi7";
-				};
-
-				config {
-					pins = "gpio85", "gpio86", "gpio88";
-					drive-strength = <16>;
-					bias-disable = <0>;
-				};
-			};
-
-			spi7_sleep: spi7_sleep {
-				mux {
-					pins = "gpio85", "gpio86", "gpio88";
-					function = "blsp_spi7";
-				};
-
-				config {
-					pins = "gpio85", "gpio86", "gpio88";
-					drive-strength = <16>;
-					bias-disable = <0>;
-				};
-			};
-			spi7_cs0_active: cs0_active {
-				mux {
-					pins = "gpio87";
-					function = "blsp_spi7_cs0";
-				};
-
-				config {
-					pins = "gpio87";
-					drive-strength = <2>;
-					bias-disable = <0>;
-				};
-			};
-		};
-
-		fpc_reset_int {
-			fpc_reset_low: reset_low {
-				mux {
-					pins = "gpio124";
-					function = "fpc_reset_gpio_low";
-				};
-
-				config {
-					pins = "gpio124";
-					drive-strength = <2>;
-					bias-disable;
-					output-low;
-				};
-			};
-
-			fpc_reset_high: reset_high {
-				mux {
-					pins = "gpio124";
-					function = "fpc_reset_gpio_high";
-				};
-
-				config {
-					pins = "gpio124";
-					drive-strength = <2>;
-					bias-disable;
-					output-high;
-				};
-			};
-
-			fpc_int_low: int_low {
-				mux {
-					pins = "gpio48";
-				};
-				config {
-					pins = "gpio48";
-					drive-strength = <2>;
-					bias-pull-down;
-					input-enable;
-				};
-			};
-		};
-
 		wcnss_pmux_5wire {
 			/* Active configuration of bus pins */
 			wcnss_default: wcnss_default {
@@ -593,83 +365,6 @@
 					       "gpio80";
 					drive-strength = <6>; /* 6 MA */
 					bias-pull-up; /* PULL UP */
-				};
-			};
-		};
-		pmx_quat_mi2s {
-			label = "quat_mi2s";
-			quat_mi2s_active: quat_mi2s_active {
-				mux {
-					pins = "gpio94", "gpio95";
-					function = "sec_mi2s";
-				};
-				configs {
-					pins = "gpio94", "gpio95";
-					drive-strength = <8>;   /* 8 MA */
-					bias-disable;           /* No PULL */
-				};
-			};
-			quat_mi2s_sleep: quat_mi2s_sleep {
-				mux {
-					pins = "gpio94", "gpio95";
-					function = "sec_mi2s";
-				};
-				configs {
-					pins = "gpio94", "gpio95";
-					drive-strength = <2>;   /* 2 MA */
-					bias-pull-down;	        /* PULL DOWN */
-				};
-			};
-		};
-
-		pmx_quat_mi2s_din {
-			label = "quat_mi2s_din";
-			quat_mi2s_din_active: quat_mi2s_din_active {
-				mux {
-					pins = "gpio12", "gpio13";
-					function = "sec_mi2s";
-				};
-				configs {
-					pins = "gpio12", "gpio13";
-					drive-strength = <8>;   /* 8 MA */
-					bias-disable;	        /* No PULL */
-					output-high;
-				};
-			};
-			quat_mi2s_din_sleep: quat_mi2s_din_sleep {
-				mux {
-					pins = "gpio12", "gpio13";
-					function = "sec_mi2s";
-				};
-				configs {
-					pins = "gpio12", "gpio13";
-					drive-strength = <2>;   /* 2 MA */
-					bias-pull-down;	        /* PULL DOWN */
-				};
-			};
-		};
-
-		cdc_mclk2_pin {
-			cdc_mclk2_sleep: cdc_mclk2_sleep {
-				mux {
-					pins = "gpio66";
-					function = "pri_mi2s";
-				};
-				config {
-					pins = "gpio66";
-					drive-strength = <2>; /* 2 mA */
-					bias-pull-down;       /* PULL DOWN */
-				};
-			};
-			cdc_mclk2_active: cdc_mclk2_active {
-				mux {
-					pins = "gpio66";
-					function = "pri_mi2s";
-				};
-				config {
-					pins = "gpio66";
-					drive-strength = <8>; /* 8 mA */
-					bias-disable;         /* NO PULL */
 				};
 			};
 		};
@@ -1623,59 +1318,7 @@
 				};
 			};
 		};
-		cdc-dmic-lines {
-			cdc_dmic0_clk_act: dmic0_clk_on {
-				mux {
-					pins = "gpio89";
-					function = "dmic0_clk";
-				};
 
-				config {
-					pins = "gpio89";
-					drive-strength = <8>;
-					bias-pull-none;
-				};
-			};
-
-			cdc_dmic0_clk_sus: dmic0_clk_off {
-				mux {
-					pins = "gpio89";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio89";
-					drive-strength = <2>;
-					bias-disable;
-				};
-			};
-
-			cdc_dmic0_data_act: dmic0_data_on {
-				mux {
-					pins = "gpio90";
-					function = "dmic0_data";
-				};
-
-				config {
-					pins = "gpio90";
-					drive-strength = <8>;
-					bias-pull-none;
-				};
-			};
-
-			cdc_dmic0_data_sus: dmic0_data_off {
-				mux {
-					pins = "gpio90";
-					function = "gpio";
-				};
-
-				config {
-					pins = "gpio90";
-					drive-strength = <2>;
-					bias-disable;
-				};
-			};
-		};
 		/*sensors */
 		cam_sensor_mclk0_default: cam_sensor_mclk0_default {
 			/* MCLK0 */
@@ -1707,57 +1350,29 @@
 			};
 		};
 
-		cam_sensor_rear_reset: cam_sensor_rear_reset {
-			/* RESET */
+		cam_sensor_rear_default: cam_sensor_rear_default {
+			/* RESET, STANDBY */
 			mux {
-				pins = "gpio36";
+				pins = "gpio36", "gpio35";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio36";
+				pins = "gpio36","gpio35";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
 		};
 
-		cam_sensor_rear_reset_sleep: cam_sensor_rear_reset_sleep {
-			/* RESET */
+		cam_sensor_rear_sleep: cam_sensor_rear_sleep {
+			/* RESET, STANDBY */
 			mux {
-				pins = "gpio36";
+				pins = "gpio36","gpio35";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio36";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_rear_standby: cam_sensor_rear_standby {
-			/* STANDBY */
-			mux {
-				pins = "gpio35";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio35";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_rear_standby_sleep: cam_sensor_rear_standby_sleep {
-			/* STANDBY */
-			mux {
-				pins = "gpio35";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio35";
+				pins = "gpio36","gpio35";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1786,34 +1401,6 @@
 
 			config {
 				pins = "gpio62";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_rear_vana: cam_sensor_rear_vana {
-			/* VANA */
-			mux {
-				pins = "gpio35";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio35";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_rear_vana_sleep: cam_sensor_rear_vana_sleep {
-			/* VANA */
-			mux {
-				pins = "gpio35";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio35";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
